syntax = "proto3";

package pl.chacz.deathstar;

option java_multiple_files = true;

service DeathStar {
    rpc Destroy (DestroyRequest) returns (DestroyReply);
}

message DestroyRequest {
    string id = 1;
}

message DestroyReply {
    string status = 1;
}